src/styles/global.scss
* {
	padding: 0;
	cursor: none !important;
	user-select: none;
	font-family: var(--main-font);
	color: var(--white);
}

img,
svg {
	-webkit-user-drag: none;
}

a {
	text-decoration: none;
	color: var(--highlight);
}

h1,
h2 {
	font-family: var(--highlight-font);
	letter-spacing: 0.2rem;
}

canvas {
	position: fixed;
	z-index: -1;
}

body {
	cursor: none;
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100vh;
	margin: 0;
	background: var(--bg-color);

	@media (max-width: 505px) {
		display: initial;
		background-color: #151515;
	}
}

::selection {
	color: #000;
	background: #ff0052;
}

:root {
	--white: #ccc;
	--gray: #333;
	--highlight: #ff0052;
	--bg-color: #060606;
	--main-font: 'Roboto', sans-serif;
	--highlight-font: 'Roboto Flex', sans-serif;
}

::-webkit-scrollbar {
	width: 0.3rem;
}

::-webkit-scrollbar-track {
	background: none;
}

::-webkit-scrollbar-thumb {
	border-radius: 1rem;
	background: var(--gray);
}

@keyframes pulse {
	0% {
		background-color: #ff000000;
	}

	10% {
		background-color: #ff005250;
	}
	100% {
		background-color: #ff000000;
	}
}

